src/parser/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.4 from parser/Grammar.y
-----------------------------------------------------------------------------

state 11 contains 1 shift/reduce conflicts.
state 12 contains 1 shift/reduce conflicts.
state 13 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Prog                              (0)
	Prog -> Dcls                                       (1)
	Ins ->                                             (2)
	Ins -> Ins PRINT "(" STRING PrntArgs ")" ";"       (3)
	Ins -> Ins READ "(" ID ")" ";"                     (4)
	Ins -> Ins WRITE "(" ID ")" ";"                    (5)
	Ins -> Ins Exp "=" Exp ";"                         (6)
	Ins -> Ins Exp "*=" Exp ";"                        (7)
	Ins -> Ins Exp "+=" Exp ";"                        (8)
	Ins -> Ins BREAK ";"                               (9)
	Ins -> Ins CONTINUE ";"                            (10)
	Ins -> Ins RETURN Exp ";"                          (11)
	Ins -> Ins EXIT ";"                                (12)
	Ins -> Ins FREE "(" ID ")" ";"                     (13)
	Ins -> Ins FREE "(" DATAID ")" ";"                 (14)
	Ins -> Ins READ "(" DATAID ")" ";"                 (15)
	Ins -> Ins IF Exp ":" Ent SmplDcls Ins NextIf Else END   (16)
	Ins -> Ins WHILE Exp ":" Ent SmplDcls Ins END      (17)
	Ins -> Ins FOR ID "=" Exp "|" Exp "|" Exp ":" Ent SmplDcls Ins END   (18)
	Ins -> Ins FOR ID "=" Exp "|" Exp ":" Ent SmplDcls Ins END   (19)
	Ins -> Ins FOR ID "=" ENUM "|" ENUM ":" Ent SmplDcls Ins END   (20)
	Ins -> Ins BEGIN Ent SmplDcls Ins END              (21)
	PrntArgs ->                                        (22)
	PrntArgs -> PrntArgs "," Exp                       (23)
	NextIf ->                                          (24)
	NextIf -> NextIf ELIF Exp ":" Ent SmplDcls Ins     (25)
	Else ->                                            (26)
	Else -> ELSE ":" Ent SmplDcls Ins                  (27)
	SmplDcls ->                                        (28)
	SmplDcls -> SmplDcls IsGlob PrimType Ptrs ID ";"   (29)
	SmplDcls -> SmplDcls IsGlob DataType DATAID Ptrs ID ";"   (30)
	SmplDcls -> SmplDcls IsGlob PrimType EmptyArrs ID ";"   (31)
	SmplDcls -> SmplDcls IsGlob PrimType StaticArrs ID ";"   (32)
	SmplDcls -> SmplDcls IsGlob PrimType ID ";"        (33)
	SmplDcls -> SmplDcls IsGlob DataType DATAID ID ";"   (34)
	Dcls ->                                            (35)
	Dcls -> Dcls FUNC PrimType ID "(" Parameters ")" ":" SmplDcls Ins END   (36)
	Dcls -> Dcls PrimType Ptrs ID ";"                  (37)
	Dcls -> Dcls PrimType EmptyArrs ID ";"             (38)
	Dcls -> Dcls PrimType StaticArrs ID ";"            (39)
	Dcls -> Dcls PrimType ID ";"                       (40)
	Dcls -> Dcls DataType DATAID ";"                   (41)
	Dcls -> Dcls ENUMDEC DATAID "{" EnumConsList "}"   (42)
	Dcls -> Dcls STRUCTDEC DATAID "{" FieldsList "}"   (43)
	Dcls -> Dcls UNIONDEC DATAID "{" FieldsList "}"    (44)
	IsGlob ->                                          (45)
	IsGlob -> GLOBAL                                   (46)
	PrimType -> INTDEC                                 (47)
	PrimType -> BOOLDEC                                (48)
	PrimType -> CHARDEC                                (49)
	PrimType -> VOIDDEC                                (50)
	PrimType -> FLOATDEC                               (51)
	DataType -> ENUMDEC                                (52)
	DataType -> STRUCTDEC                              (53)
	DataType -> UNIONDEC                               (54)
	Parameter -> ListParam PrimType ID                 (55)
	Parameter -> ListParam PrimType Ptrs ID            (56)
	Parameter -> ListParam PrimType EmptyArrs ID       (57)
	Parameter -> ListParam DataType DATAID             (58)
	ListParam ->                                       (59)
	ListParam -> ListParam PrimType ID ","             (60)
	ListParam -> ListParam DataType DATAID ","         (61)
	ListParam -> ListParam PrimType Ptrs ID ","        (62)
	ListParam -> ListParam PrimType EmptyArrs ID ","   (63)
	Parameters ->                                      (64)
	Parameters -> Parameter                            (65)
	EnumConsList -> ENUM                               (66)
	EnumConsList -> EnumConsList "," ENUM              (67)
	FieldsList -> ID "::" PrimType                     (68)
	FieldsList -> DATAID "::" DATAID                   (69)
	FieldsList -> FieldsList "," ID "::" PrimType      (70)
	FieldsList -> FieldsList "," DATAID "::" DATAID    (71)
	Ptrs -> "*"                                        (72)
	Ptrs -> Ptrs "*"                                   (73)
	EmptyArrs -> "[" "]"                               (74)
	EmptyArrs -> EmptyArrs "[" "]"                     (75)
	StaticArrs -> "[" INT "]"                          (76)
	StaticArrs -> StaticArrs "[" INT "]"               (77)
	Exp -> Exp "+" Exp                                 (78)
	Exp -> Exp "-" Exp                                 (79)
	Exp -> Exp "^" Exp                                 (80)
	Exp -> Exp "*" Exp                                 (81)
	Exp -> Exp "/" Exp                                 (82)
	Exp -> Exp "//" Exp                                (83)
	Exp -> Exp "%" Exp                                 (84)
	Exp -> "-" Exp                                     (85)
	Exp -> Exp OR Exp                                  (86)
	Exp -> Exp "||" Exp                                (87)
	Exp -> Exp AND Exp                                 (88)
	Exp -> Exp "&&" Exp                                (89)
	Exp -> "!" Exp                                     (90)
	Exp -> Exp "<" Exp                                 (91)
	Exp -> Exp "<=" Exp                                (92)
	Exp -> Exp ">" Exp                                 (93)
	Exp -> Exp ">=" Exp                                (94)
	Exp -> Exp "==" Exp                                (95)
	Exp -> Exp "!=" Exp                                (96)
	Exp -> Exp "!!" Exp                                (97)
	Exp -> Exp "." Exp                                 (98)
	Exp -> ID "[" Exp "]"                              (99)
	Exp -> ID "(" Exp ")"                              (100)
	Exp -> "*" Exp                                     (101)
	Exp -> "(" Exp ")"                                 (102)
	Exp -> Term                                        (103)
	Exp -> MALLOC "(" Exp ")"                          (104)
	Exp -> SIZEOF "(" Exp ")"                          (105)
	Exp -> SIZEOF "(" PrimType ")"                     (106)
	Exp -> GET "(" ENUM ")"                            (107)
	Term -> TRUE                                       (108)
	Term -> FALSE                                      (109)
	Term -> ID                                         (110)
	Term -> DATAID                                     (111)
	Term -> FLOAT                                      (112)
	Term -> INT                                        (113)
	Term -> CHAR                                       (114)
	Ent ->                                             (115)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ID             { TkId       _ _ }
	DATAID         { TkDId      _ _ }
	INTDEC         { TkInt      _ }
	BOOLDEC        { TkBool     _ }
	CHARDEC        { TkChar     _ }
	VOIDDEC        { TkVoid     _ }
	FLOATDEC       { TkFloat    _ }
	STRUCTDEC      { TkStruct   _ }
	UNIONDEC       { TkUnion    _ }
	ENUMDEC        { TkEnum     _ }
	GLOBAL         { TKGlobal   _ }
	"["            { TkLBracket _ }
	"]"            { TkRBracket _ }
	"{"            { TkLCurly   _ }
	"}"            { TkRCurly   _ }
	"("            { TkLRound   _ }
	")"            { TkRRound   _ }
	"|"            { TkPipe     _ }
	"::"           { TkDColon   _ }
	":"            { TkColon    _ }
	";"            { TkSColon   _ }
	","            { TkComma    _ }
	"*="           { TkTEQ      _ }
	"+="           { TkPEQ      _ }
	"."            { TkDot      _ }
	"!"            { TkExcMark  _ }
	"!!"           { TkExcArr   _ }
	"!="           { TkNEQ      _ }
	"&&"           { TkDAmp     _ }
	"||"           { TkPOr      _ }
	AND            { TkAnd      _ }
	OR             { TkOr       _ }
	">="           { TkGE     _ }
	"<="           { TkLE     _ }
	">"            { TkGT     _ }
	"<"            { TkLT     _ }
	"/"            { TkIDiv   _ }
	"//"           { TkDiv    _ }
	"+"            { TkSum    _ }
	"-"            { TkMin    _ }
	"^"            { TkPower  _ }
	"*"            { TkTimes  _ }
	"%"            { TkMod    _ }
	"=="           { TkEq     _ }
	"="            { TkAssign _ }
	FUNC           { TkFunc   _ }
	IF             { TkIf       _ }
	ELIF           { TkElif     _ }
	ELSE           { TkElse     _ }
	END            { TkEnd      _ }
	WHILE          { TkWhile    _ }
	FOR            { TkFor      _ }
	BEGIN          { TkBegin    _ }
	BREAK          { TkBreak    _ }
	CONTINUE       { TkContinue _ }
	RETURN         { TkReturn   _ }
	EXIT           { TkExit     _ }
	READ           { TkRead   _ }
	WRITE          { TkWrite  _ }
	PRINT          { TkPrint  _ }
	MALLOC         { TkAlloc  _ }
	FREE           { TkFree   _ }
	SIZEOF         { TkSizeOf _ }
	GET            { TkGet    _ }
	TRUE           { TkTrue      _ }
	FALSE          { TkFalse     _ }
	CHAR           { TkCharVal   _ _ }
	STRING         { TkString    _ _ }
	INT            { TkNum       _ _ }
	FLOAT          { TkFloatVal  _ _ }
	ENUM           { TkEnumCons _ _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Prog            rule  1
	Ins             rules 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21
	PrntArgs        rules 22, 23
	NextIf          rules 24, 25
	Else            rules 26, 27
	SmplDcls        rules 28, 29, 30, 31, 32, 33, 34
	Dcls            rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44
	IsGlob          rules 45, 46
	PrimType        rules 47, 48, 49, 50, 51
	DataType        rules 52, 53, 54
	Parameter       rules 55, 56, 57, 58
	ListParam       rules 59, 60, 61, 62, 63
	Parameters      rules 64, 65
	EnumConsList    rules 66, 67
	FieldsList      rules 68, 69, 70, 71
	Ptrs            rules 72, 73
	EmptyArrs       rules 74, 75
	StaticArrs      rules 76, 77
	Exp             rules 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107
	Term            rules 108, 109, 110, 111, 112, 113, 114
	Ent             rule  115

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	INTDEC         reduce using rule 35
	BOOLDEC        reduce using rule 35
	CHARDEC        reduce using rule 35
	VOIDDEC        reduce using rule 35
	FLOATDEC       reduce using rule 35
	STRUCTDEC      reduce using rule 35
	UNIONDEC       reduce using rule 35
	ENUMDEC        reduce using rule 35
	FUNC           reduce using rule 35
	%eof           reduce using rule 35

	Prog           goto state 3
	Dcls           goto state 2

State 1



	Dcls           goto state 2

State 2

	Prog -> Dcls .                                      (rule 1)
	Dcls -> Dcls . FUNC PrimType ID "(" Parameters ")" ":" SmplDcls Ins END    (rule 36)
	Dcls -> Dcls . PrimType Ptrs ID ";"                 (rule 37)
	Dcls -> Dcls . PrimType EmptyArrs ID ";"            (rule 38)
	Dcls -> Dcls . PrimType StaticArrs ID ";"           (rule 39)
	Dcls -> Dcls . PrimType ID ";"                      (rule 40)
	Dcls -> Dcls . DataType DATAID ";"                  (rule 41)
	Dcls -> Dcls . ENUMDEC DATAID "{" EnumConsList "}"    (rule 42)
	Dcls -> Dcls . STRUCTDEC DATAID "{" FieldsList "}"    (rule 43)
	Dcls -> Dcls . UNIONDEC DATAID "{" FieldsList "}"    (rule 44)

	INTDEC         shift, and enter state 6
	BOOLDEC        shift, and enter state 7
	CHARDEC        shift, and enter state 8
	VOIDDEC        shift, and enter state 9
	FLOATDEC       shift, and enter state 10
	STRUCTDEC      shift, and enter state 11
	UNIONDEC       shift, and enter state 12
	ENUMDEC        shift, and enter state 13
	FUNC           shift, and enter state 14
	%eof           reduce using rule 1

	PrimType       goto state 4
	DataType       goto state 5

State 3

	%start_parser -> Prog .                             (rule 0)

	%eof           accept


State 4

	Dcls -> Dcls PrimType . Ptrs ID ";"                 (rule 37)
	Dcls -> Dcls PrimType . EmptyArrs ID ";"            (rule 38)
	Dcls -> Dcls PrimType . StaticArrs ID ";"           (rule 39)
	Dcls -> Dcls PrimType . ID ";"                      (rule 40)

	ID             shift, and enter state 23
	"["            shift, and enter state 24
	"*"            shift, and enter state 25

	Ptrs           goto state 20
	EmptyArrs      goto state 21
	StaticArrs     goto state 22

State 5

	Dcls -> Dcls DataType . DATAID ";"                  (rule 41)

	DATAID         shift, and enter state 19


State 6

	PrimType -> INTDEC .                                (rule 47)

	ID             reduce using rule 47
	"["            reduce using rule 47
	"}"            reduce using rule 47
	")"            reduce using rule 47
	","            reduce using rule 47
	"*"            reduce using rule 47


State 7

	PrimType -> BOOLDEC .                               (rule 48)

	ID             reduce using rule 48
	"["            reduce using rule 48
	"}"            reduce using rule 48
	")"            reduce using rule 48
	","            reduce using rule 48
	"*"            reduce using rule 48


State 8

	PrimType -> CHARDEC .                               (rule 49)

	ID             reduce using rule 49
	"["            reduce using rule 49
	"}"            reduce using rule 49
	")"            reduce using rule 49
	","            reduce using rule 49
	"*"            reduce using rule 49


State 9

	PrimType -> VOIDDEC .                               (rule 50)

	ID             reduce using rule 50
	"["            reduce using rule 50
	"}"            reduce using rule 50
	")"            reduce using rule 50
	","            reduce using rule 50
	"*"            reduce using rule 50


State 10

	PrimType -> FLOATDEC .                              (rule 51)

	ID             reduce using rule 51
	"["            reduce using rule 51
	"}"            reduce using rule 51
	")"            reduce using rule 51
	","            reduce using rule 51
	"*"            reduce using rule 51


State 11

	Dcls -> Dcls STRUCTDEC . DATAID "{" FieldsList "}"    (rule 43)
	DataType -> STRUCTDEC .                             (rule 53)

	DATAID         shift, and enter state 18
			(reduce using rule 53)



State 12

	Dcls -> Dcls UNIONDEC . DATAID "{" FieldsList "}"    (rule 44)
	DataType -> UNIONDEC .                              (rule 54)

	DATAID         shift, and enter state 17
			(reduce using rule 54)



State 13

	Dcls -> Dcls ENUMDEC . DATAID "{" EnumConsList "}"    (rule 42)
	DataType -> ENUMDEC .                               (rule 52)

	DATAID         shift, and enter state 16
			(reduce using rule 52)



State 14

	Dcls -> Dcls FUNC . PrimType ID "(" Parameters ")" ":" SmplDcls Ins END    (rule 36)

	INTDEC         shift, and enter state 6
	BOOLDEC        shift, and enter state 7
	CHARDEC        shift, and enter state 8
	VOIDDEC        shift, and enter state 9
	FLOATDEC       shift, and enter state 10

	PrimType       goto state 15

State 15

	Dcls -> Dcls FUNC PrimType . ID "(" Parameters ")" ":" SmplDcls Ins END    (rule 36)

	ID             shift, and enter state 39


State 16

	Dcls -> Dcls ENUMDEC DATAID . "{" EnumConsList "}"    (rule 42)

	"{"            shift, and enter state 38


State 17

	Dcls -> Dcls UNIONDEC DATAID . "{" FieldsList "}"    (rule 44)

	"{"            shift, and enter state 37


State 18

	Dcls -> Dcls STRUCTDEC DATAID . "{" FieldsList "}"    (rule 43)

	"{"            shift, and enter state 36


State 19

	Dcls -> Dcls DataType DATAID . ";"                  (rule 41)

	";"            shift, and enter state 35


State 20

	Dcls -> Dcls PrimType Ptrs . ID ";"                 (rule 37)
	Ptrs -> Ptrs . "*"                                  (rule 73)

	ID             shift, and enter state 33
	"*"            shift, and enter state 34


State 21

	Dcls -> Dcls PrimType EmptyArrs . ID ";"            (rule 38)
	EmptyArrs -> EmptyArrs . "[" "]"                    (rule 75)

	ID             shift, and enter state 31
	"["            shift, and enter state 32


State 22

	Dcls -> Dcls PrimType StaticArrs . ID ";"           (rule 39)
	StaticArrs -> StaticArrs . "[" INT "]"              (rule 77)

	ID             shift, and enter state 29
	"["            shift, and enter state 30


State 23

	Dcls -> Dcls PrimType ID . ";"                      (rule 40)

	";"            shift, and enter state 28


State 24

	EmptyArrs -> "[" . "]"                              (rule 74)
	StaticArrs -> "[" . INT "]"                         (rule 76)

	"]"            shift, and enter state 26
	INT            shift, and enter state 27


State 25

	Ptrs -> "*" .                                       (rule 72)

	ID             reduce using rule 72
	"*"            reduce using rule 72


State 26

	EmptyArrs -> "[" "]" .                              (rule 74)

	ID             reduce using rule 74
	"["            reduce using rule 74


State 27

	StaticArrs -> "[" INT . "]"                         (rule 76)

	"]"            shift, and enter state 52


State 28

	Dcls -> Dcls PrimType ID ";" .                      (rule 40)

	INTDEC         reduce using rule 40
	BOOLDEC        reduce using rule 40
	CHARDEC        reduce using rule 40
	VOIDDEC        reduce using rule 40
	FLOATDEC       reduce using rule 40
	STRUCTDEC      reduce using rule 40
	UNIONDEC       reduce using rule 40
	ENUMDEC        reduce using rule 40
	FUNC           reduce using rule 40
	%eof           reduce using rule 40


State 29

	Dcls -> Dcls PrimType StaticArrs ID . ";"           (rule 39)

	";"            shift, and enter state 51


State 30

	StaticArrs -> StaticArrs "[" . INT "]"              (rule 77)

	INT            shift, and enter state 50


State 31

	Dcls -> Dcls PrimType EmptyArrs ID . ";"            (rule 38)

	";"            shift, and enter state 49


State 32

	EmptyArrs -> EmptyArrs "[" . "]"                    (rule 75)

	"]"            shift, and enter state 48


State 33

	Dcls -> Dcls PrimType Ptrs ID . ";"                 (rule 37)

	";"            shift, and enter state 47


State 34

	Ptrs -> Ptrs "*" .                                  (rule 73)

	ID             reduce using rule 73
	"*"            reduce using rule 73


State 35

	Dcls -> Dcls DataType DATAID ";" .                  (rule 41)

	INTDEC         reduce using rule 41
	BOOLDEC        reduce using rule 41
	CHARDEC        reduce using rule 41
	VOIDDEC        reduce using rule 41
	FLOATDEC       reduce using rule 41
	STRUCTDEC      reduce using rule 41
	UNIONDEC       reduce using rule 41
	ENUMDEC        reduce using rule 41
	FUNC           reduce using rule 41
	%eof           reduce using rule 41


State 36

	Dcls -> Dcls STRUCTDEC DATAID "{" . FieldsList "}"    (rule 43)

	ID             shift, and enter state 44
	DATAID         shift, and enter state 45

	FieldsList     goto state 46

State 37

	Dcls -> Dcls UNIONDEC DATAID "{" . FieldsList "}"    (rule 44)

	ID             shift, and enter state 44
	DATAID         shift, and enter state 45

	FieldsList     goto state 43

State 38

	Dcls -> Dcls ENUMDEC DATAID "{" . EnumConsList "}"    (rule 42)

	ENUM           shift, and enter state 42

	EnumConsList   goto state 41

State 39

	Dcls -> Dcls FUNC PrimType ID . "(" Parameters ")" ":" SmplDcls Ins END    (rule 36)

	"("            shift, and enter state 40


State 40

	Dcls -> Dcls FUNC PrimType ID "(" . Parameters ")" ":" SmplDcls Ins END    (rule 36)

	INTDEC         reduce using rule 59
	BOOLDEC        reduce using rule 59
	CHARDEC        reduce using rule 59
	VOIDDEC        reduce using rule 59
	FLOATDEC       reduce using rule 59
	STRUCTDEC      reduce using rule 59
	UNIONDEC       reduce using rule 59
	ENUMDEC        reduce using rule 59
	")"            reduce using rule 64

	Parameter      goto state 61
	ListParam      goto state 62
	Parameters     goto state 63

State 41

	Dcls -> Dcls ENUMDEC DATAID "{" EnumConsList . "}"    (rule 42)
	EnumConsList -> EnumConsList . "," ENUM             (rule 67)

	"}"            shift, and enter state 59
	","            shift, and enter state 60


State 42

	EnumConsList -> ENUM .                              (rule 66)

	"}"            reduce using rule 66
	","            reduce using rule 66


State 43

	Dcls -> Dcls UNIONDEC DATAID "{" FieldsList . "}"    (rule 44)
	FieldsList -> FieldsList . "," ID "::" PrimType     (rule 70)
	FieldsList -> FieldsList . "," DATAID "::" DATAID    (rule 71)

	"}"            shift, and enter state 58
	","            shift, and enter state 55


State 44

	FieldsList -> ID . "::" PrimType                    (rule 68)

	"::"           shift, and enter state 57


State 45

	FieldsList -> DATAID . "::" DATAID                  (rule 69)

	"::"           shift, and enter state 56


State 46

	Dcls -> Dcls STRUCTDEC DATAID "{" FieldsList . "}"    (rule 43)
	FieldsList -> FieldsList . "," ID "::" PrimType     (rule 70)
	FieldsList -> FieldsList . "," DATAID "::" DATAID    (rule 71)

	"}"            shift, and enter state 54
	","            shift, and enter state 55


State 47

	Dcls -> Dcls PrimType Ptrs ID ";" .                 (rule 37)

	INTDEC         reduce using rule 37
	BOOLDEC        reduce using rule 37
	CHARDEC        reduce using rule 37
	VOIDDEC        reduce using rule 37
	FLOATDEC       reduce using rule 37
	STRUCTDEC      reduce using rule 37
	UNIONDEC       reduce using rule 37
	ENUMDEC        reduce using rule 37
	FUNC           reduce using rule 37
	%eof           reduce using rule 37


State 48

	EmptyArrs -> EmptyArrs "[" "]" .                    (rule 75)

	ID             reduce using rule 75
	"["            reduce using rule 75


State 49

	Dcls -> Dcls PrimType EmptyArrs ID ";" .            (rule 38)

	INTDEC         reduce using rule 38
	BOOLDEC        reduce using rule 38
	CHARDEC        reduce using rule 38
	VOIDDEC        reduce using rule 38
	FLOATDEC       reduce using rule 38
	STRUCTDEC      reduce using rule 38
	UNIONDEC       reduce using rule 38
	ENUMDEC        reduce using rule 38
	FUNC           reduce using rule 38
	%eof           reduce using rule 38


State 50

	StaticArrs -> StaticArrs "[" INT . "]"              (rule 77)

	"]"            shift, and enter state 53


State 51

	Dcls -> Dcls PrimType StaticArrs ID ";" .           (rule 39)

	INTDEC         reduce using rule 39
	BOOLDEC        reduce using rule 39
	CHARDEC        reduce using rule 39
	VOIDDEC        reduce using rule 39
	FLOATDEC       reduce using rule 39
	STRUCTDEC      reduce using rule 39
	UNIONDEC       reduce using rule 39
	ENUMDEC        reduce using rule 39
	FUNC           reduce using rule 39
	%eof           reduce using rule 39


State 52

	StaticArrs -> "[" INT "]" .                         (rule 76)

	ID             reduce using rule 76
	"["            reduce using rule 76


State 53

	StaticArrs -> StaticArrs "[" INT "]" .              (rule 77)

	ID             reduce using rule 77
	"["            reduce using rule 77


State 54

	Dcls -> Dcls STRUCTDEC DATAID "{" FieldsList "}" .    (rule 43)

	INTDEC         reduce using rule 43
	BOOLDEC        reduce using rule 43
	CHARDEC        reduce using rule 43
	VOIDDEC        reduce using rule 43
	FLOATDEC       reduce using rule 43
	STRUCTDEC      reduce using rule 43
	UNIONDEC       reduce using rule 43
	ENUMDEC        reduce using rule 43
	FUNC           reduce using rule 43
	%eof           reduce using rule 43


State 55

	FieldsList -> FieldsList "," . ID "::" PrimType     (rule 70)
	FieldsList -> FieldsList "," . DATAID "::" DATAID    (rule 71)

	ID             shift, and enter state 73
	DATAID         shift, and enter state 74


State 56

	FieldsList -> DATAID "::" . DATAID                  (rule 69)

	DATAID         shift, and enter state 72


State 57

	FieldsList -> ID "::" . PrimType                    (rule 68)

	INTDEC         shift, and enter state 6
	BOOLDEC        shift, and enter state 7
	CHARDEC        shift, and enter state 8
	VOIDDEC        shift, and enter state 9
	FLOATDEC       shift, and enter state 10

	PrimType       goto state 71

State 58

	Dcls -> Dcls UNIONDEC DATAID "{" FieldsList "}" .    (rule 44)

	INTDEC         reduce using rule 44
	BOOLDEC        reduce using rule 44
	CHARDEC        reduce using rule 44
	VOIDDEC        reduce using rule 44
	FLOATDEC       reduce using rule 44
	STRUCTDEC      reduce using rule 44
	UNIONDEC       reduce using rule 44
	ENUMDEC        reduce using rule 44
	FUNC           reduce using rule 44
	%eof           reduce using rule 44


State 59

	Dcls -> Dcls ENUMDEC DATAID "{" EnumConsList "}" .    (rule 42)

	INTDEC         reduce using rule 42
	BOOLDEC        reduce using rule 42
	CHARDEC        reduce using rule 42
	VOIDDEC        reduce using rule 42
	FLOATDEC       reduce using rule 42
	STRUCTDEC      reduce using rule 42
	UNIONDEC       reduce using rule 42
	ENUMDEC        reduce using rule 42
	FUNC           reduce using rule 42
	%eof           reduce using rule 42


State 60

	EnumConsList -> EnumConsList "," . ENUM             (rule 67)

	ENUM           shift, and enter state 70


State 61

	Parameters -> Parameter .                           (rule 65)

	")"            reduce using rule 65


State 62

	Parameter -> ListParam . PrimType ID                (rule 55)
	Parameter -> ListParam . PrimType Ptrs ID           (rule 56)
	Parameter -> ListParam . PrimType EmptyArrs ID      (rule 57)
	Parameter -> ListParam . DataType DATAID            (rule 58)
	ListParam -> ListParam . PrimType ID ","            (rule 60)
	ListParam -> ListParam . DataType DATAID ","        (rule 61)
	ListParam -> ListParam . PrimType Ptrs ID ","       (rule 62)
	ListParam -> ListParam . PrimType EmptyArrs ID ","    (rule 63)

	INTDEC         shift, and enter state 6
	BOOLDEC        shift, and enter state 7
	CHARDEC        shift, and enter state 8
	VOIDDEC        shift, and enter state 9
	FLOATDEC       shift, and enter state 10
	STRUCTDEC      shift, and enter state 67
	UNIONDEC       shift, and enter state 68
	ENUMDEC        shift, and enter state 69

	PrimType       goto state 65
	DataType       goto state 66

State 63

	Dcls -> Dcls FUNC PrimType ID "(" Parameters . ")" ":" SmplDcls Ins END    (rule 36)

	")"            shift, and enter state 64


State 64

	Dcls -> Dcls FUNC PrimType ID "(" Parameters ")" . ":" SmplDcls Ins END    (rule 36)

	":"            shift, and enter state 82


State 65

	Parameter -> ListParam PrimType . ID                (rule 55)
	Parameter -> ListParam PrimType . Ptrs ID           (rule 56)
	Parameter -> ListParam PrimType . EmptyArrs ID      (rule 57)
	ListParam -> ListParam PrimType . ID ","            (rule 60)
	ListParam -> ListParam PrimType . Ptrs ID ","       (rule 62)
	ListParam -> ListParam PrimType . EmptyArrs ID ","    (rule 63)

	ID             shift, and enter state 80
	"["            shift, and enter state 81
	"*"            shift, and enter state 25

	Ptrs           goto state 78
	EmptyArrs      goto state 79

State 66

	Parameter -> ListParam DataType . DATAID            (rule 58)
	ListParam -> ListParam DataType . DATAID ","        (rule 61)

	DATAID         shift, and enter state 77


State 67

	DataType -> STRUCTDEC .                             (rule 53)

	DATAID         reduce using rule 53


State 68

	DataType -> UNIONDEC .                              (rule 54)

	DATAID         reduce using rule 54


State 69

	DataType -> ENUMDEC .                               (rule 52)

	DATAID         reduce using rule 52


State 70

	EnumConsList -> EnumConsList "," ENUM .             (rule 67)

	"}"            reduce using rule 67
	","            reduce using rule 67


State 71

	FieldsList -> ID "::" PrimType .                    (rule 68)

	"}"            reduce using rule 68
	","            reduce using rule 68


State 72

	FieldsList -> DATAID "::" DATAID .                  (rule 69)

	"}"            reduce using rule 69
	","            reduce using rule 69


State 73

	FieldsList -> FieldsList "," ID . "::" PrimType     (rule 70)

	"::"           shift, and enter state 76


State 74

	FieldsList -> FieldsList "," DATAID . "::" DATAID    (rule 71)

	"::"           shift, and enter state 75


State 75

	FieldsList -> FieldsList "," DATAID "::" . DATAID    (rule 71)

	DATAID         shift, and enter state 89


State 76

	FieldsList -> FieldsList "," ID "::" . PrimType     (rule 70)

	INTDEC         shift, and enter state 6
	BOOLDEC        shift, and enter state 7
	CHARDEC        shift, and enter state 8
	VOIDDEC        shift, and enter state 9
	FLOATDEC       shift, and enter state 10

	PrimType       goto state 88

State 77

	Parameter -> ListParam DataType DATAID .            (rule 58)
	ListParam -> ListParam DataType DATAID . ","        (rule 61)

	")"            reduce using rule 58
	","            shift, and enter state 87


State 78

	Parameter -> ListParam PrimType Ptrs . ID           (rule 56)
	ListParam -> ListParam PrimType Ptrs . ID ","       (rule 62)
	Ptrs -> Ptrs . "*"                                  (rule 73)

	ID             shift, and enter state 86
	"*"            shift, and enter state 34


State 79

	Parameter -> ListParam PrimType EmptyArrs . ID      (rule 57)
	ListParam -> ListParam PrimType EmptyArrs . ID ","    (rule 63)
	EmptyArrs -> EmptyArrs . "[" "]"                    (rule 75)

	ID             shift, and enter state 85
	"["            shift, and enter state 32


State 80

	Parameter -> ListParam PrimType ID .                (rule 55)
	ListParam -> ListParam PrimType ID . ","            (rule 60)

	")"            reduce using rule 55
	","            shift, and enter state 84


State 81

	EmptyArrs -> "[" . "]"                              (rule 74)

	"]"            shift, and enter state 26


State 82

	Dcls -> Dcls FUNC PrimType ID "(" Parameters ")" ":" . SmplDcls Ins END    (rule 36)

	ID             reduce using rule 28
	DATAID         reduce using rule 28
	INTDEC         reduce using rule 28
	BOOLDEC        reduce using rule 28
	CHARDEC        reduce using rule 28
	VOIDDEC        reduce using rule 28
	FLOATDEC       reduce using rule 28
	STRUCTDEC      reduce using rule 28
	UNIONDEC       reduce using rule 28
	ENUMDEC        reduce using rule 28
	GLOBAL         reduce using rule 28
	"("            reduce using rule 28
	"!"            reduce using rule 28
	"-"            reduce using rule 28
	"*"            reduce using rule 28
	IF             reduce using rule 28
	END            reduce using rule 28
	WHILE          reduce using rule 28
	FOR            reduce using rule 28
	BEGIN          reduce using rule 28
	BREAK          reduce using rule 28
	CONTINUE       reduce using rule 28
	RETURN         reduce using rule 28
	EXIT           reduce using rule 28
	READ           reduce using rule 28
	WRITE          reduce using rule 28
	PRINT          reduce using rule 28
	MALLOC         reduce using rule 28
	FREE           reduce using rule 28
	SIZEOF         reduce using rule 28
	GET            reduce using rule 28
	TRUE           reduce using rule 28
	FALSE          reduce using rule 28
	CHAR           reduce using rule 28
	INT            reduce using rule 28
	FLOAT          reduce using rule 28

	SmplDcls       goto state 83

State 83

	SmplDcls -> SmplDcls . IsGlob PrimType Ptrs ID ";"    (rule 29)
	SmplDcls -> SmplDcls . IsGlob DataType DATAID Ptrs ID ";"    (rule 30)
	SmplDcls -> SmplDcls . IsGlob PrimType EmptyArrs ID ";"    (rule 31)
	SmplDcls -> SmplDcls . IsGlob PrimType StaticArrs ID ";"    (rule 32)
	SmplDcls -> SmplDcls . IsGlob PrimType ID ";"       (rule 33)
	SmplDcls -> SmplDcls . IsGlob DataType DATAID ID ";"    (rule 34)
	Dcls -> Dcls FUNC PrimType ID "(" Parameters ")" ":" SmplDcls . Ins END    (rule 36)
